--- a/backend/package.json
+++ b/backend/package.json
@@ -8,8 +8,11 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.5.0",
     "twilio": "^3.80.0"
   }
 }
