--- a/backend/package.json
+++ b/backend/package.json
@@ -8,9 +8,11 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "jimp": "^0.16.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.0",
     "twilio": "^3.80.0"
