--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "jimp": "^0.16.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.0",
+    "socket.io": "^4.5.1",
     "twilio": "^3.80.0"
   }
 }
